2018-04-09  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-1011
	
	* src/CMakeLists.txt:  Added on datarecord for linerecord and
	removed another.
	
	* src/absorption.{cc,h}, src/linefunctions.{cc,h}, src/m_abs.cc:
	* src/m_zeeman.cc, src/methods.cc, src/workspace.cc:
	Removed Zeeman splitting vector
	
	* src/linerecord.{cc,h}:  Removed obsolete partition function
	by linerecord and added a Zeeman effect record.  Writing and
	reading still needs testing.  It should write and store the
	splitting and polarization expected of the line.  This should
	allow to input external g-factors directly via the linerecord
	
	* src/linerecord_partitionfunctiondata.{cc,h}: deleted
	
	* src/zeeman.{cc,h}, (added) src/zeemandata.{cc,h}: Changed
	interface so that the splitting is known by the line.  Moved
	many tests into the new ZeemanEffectData class.

2018-04-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1010

	Another small step towards surface Jacobians. Main change is that
	iy_surface_agenda has some new in- and output. You fix this most
	easily by adding a call of SurfaceDummy in this way:

	AgendaSet( iy_surface_agenda ){
	SurfaceDummy
	iySurfaceRtpropAgenda
	}

	The defintion of iy_surface_agenda in agendas.arts is updated and
	included this change, so most likely you don't need to do anything.

	* src/m_nlte.cc (nlte_fieldForSingleSpeciesNonOverlappingLines):
	* src/m_radiation_field.cc (radiation_fieldCalcForRotationalNLTE):
	Adopted call of radiation_fieldCalcFromiyCalc.

	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel)
	(radiation_fieldCalcFromiyCalc)
	* src/m_fos.cc (iyHybrid): Adopted call of iyEmissionStandard.

	* src/m_fos.cc (iyHybrid):
	* src/m_rte.cc (iyEmissionStandard): Adopted call of get_iy_of_background.

	* src/rte.cc (get_iy_of_background): Started to add handling of
	surface_props_data and associated variables.

	* controlfiles/general/general.arts: surface_props_data and
	surface_props_names now set to be empty.
