@@ -392,8 +392,7 @@ extern const String WIND_MAINTAG        = "Wind";
 extern const String MAGFIELD_MAINTAG    = "Magnetic field";
 extern const String FLUX_MAINTAG        = "Beam flux";
 
-extern const String SURRAFE_MAINTAG       = "Surface";
-extern const String SURFACE_WINDSPEED_TAG = "Wind speed";
+extern const String SURFACE_MAINTAG       = "Surface";
 
 // New tags for only propmat jacobians
 extern const String PROPMAT_SUBSUBTAG              = "From propagation matrix";
