@@ -1,3 +1,12 @@
+2018-04-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-1012
+
+	* src/jacobian.cc (check_retrieval_grids): Made version for
+	surface variables.
+
+	* src/m_jacobian.cc (jacobianAddSurfaceVariable): New.
+
 2018-04-09  Richard Larsson <ric.larsson@gmail.com>
 
 	* arts-2-3-1011
